--- a/force-app/main/default/classes/SummitEventsGeneratedItinerariesExt.cls
+++ b/force-app/main/default/classes/SummitEventsGeneratedItinerariesExt.cls
@@ -1,7 +1,7 @@
-/**
- * Created by Thaddaeus Dahlberg, Software Engineer, University of St. Thomas on 2/15/2023.
- */
-
+// Copyright (c) 2020, Salesforce.org. All rights reserved.
+// Use of this source code is governed by a BSD 3-Clause.
+// License can be found found in the LICENSE file in this repository.
+// Created by Thaddaeus Dahlberg on 2/15/2023.
 
 public with sharing class SummitEventsGeneratedItinerariesExt {
     public Summit_Events_Registration__c seaRegistration;
