Added more fields to question shared query

--- a/force-app/main/default/classes/SummitEventsShared.cls
+++ b/force-app/main/default/classes/SummitEventsShared.cls
@@ -179,16 +179,7 @@ public with sharing class SummitEventsShared {
         //check if registration id is there and whether status it is set to registered. IF so reset cookie if it is.
         if (String.isNotBlank(eventInformation.registrationId) && String.isBlank(eventInformation.valid)) {
             Summit_Events_Registration__c evtReg = new Summit_Events_Registration__c();
-            try {
-                evtReg = [
-                        SELECT Status__c
-                        FROM Summit_Events_Registration__c
-                        WHERE Id = :eventInformation.registrationId
-                        WITH SECURITY_ENFORCED
-                ];
-            } catch (Exception ex) {
-
-            }
+            evtReg = SummitEventsReadShared.getRegistrationById(eventInformation.registrationId);
             if (evtReg.Status__c != 'Started' || evtReg == null) {
                 eventInformation.registrationId = '';
             }
