--- a/force-app/main/default/classes/SummitEventsReadShared.cls
+++ b/force-app/main/default/classes/SummitEventsReadShared.cls
@@ -98,7 +98,10 @@ public without sharing class SummitEventsReadShared {
     public static Map<Id, Summit_Events_Question__c> getAdditionalQuestionsByEventId(Id eventId, List<String> registrantTypes) {
         return new Map<Id, Summit_Events_Question__c>([
                 SELECT Id, Name, Question_Label__c, Question_Field_Type__c, Default_Value__c, Registrant_Type__c, Instructions__c, Help_Text__c, Display_Order__c,
-                        Map_to_Field__c, Picklist_Values__c, Text_Limit__c, Controlling_Question__c, Controlling_Logic__c, Required__c, Is_Visible__c
+                        Map_to_Field__c, Picklist_Values__c, Text_Limit__c, Controlling_Question__c, Controlling_Logic__c, Required__c, Is_Visible__c, Display_Style__c,
+                        Existing_Picklist_Values__c, Picklist_Values_Long__c, Error_Assist_Text__c, Lookup_Results_Icon__c, Lookup_Secondary_Input_Link_Text__c,
+                        Lookup_Secondary_Value_Field__c, Lookup_Secondary_Input_Instructions__c, Lookup_No_Results_Label__c, Lookup_Object__c, Lookup_Fields__c,
+                        Lookup_Where_Clause__c, Lookup_Order_By__c
                 FROM Summit_Events_Question__c
                 WHERE Event__c = :eventId
                 AND Registrant_Type__c IN :registrantTypes
