fix for auto add appointments, fees being receipted

--- a/force-app/main/default/classes/SummitEventsReadShared.cls
+++ b/force-app/main/default/classes/SummitEventsReadShared.cls
@@ -159,6 +159,7 @@ public without sharing class SummitEventsReadShared {
                 WHERE Event_Registration__c = :registrationId
                 WITH SECURITY_ENFORCED
         ];
+
     }
 
     public static List<Summit_Events_Fee__c> getDonationsByRegistrationId(Id registrationId) {
@@ -181,6 +182,44 @@ public without sharing class SummitEventsReadShared {
                 AND Event_Fee_Type__c != 'Optional Donation'
                 AND Event_Registration__c = :registrationId
                 WITH SECURITY_ENFORCED
+        ];
+    }
+
+    public static List<Summit_Events_Appointment_Type__c> getAutoAddAppointments(Id registrationId, Id eventId, String instanceTitle, Date instanceStartDate, Date instanceEndDate, String dayOfWeek) {
+        return [
+                SELECT Id, Name, Title__c, Description__c, Appointment_Type__c, Appointment_Category__c, Registrant_Input__c, Custom_Picklist__c, Appointment_Limits__c,
+                        Chosen_State__c, Sort_Order__c, Auto_Confirm_Appointment__c, Auto_add_building__c, Auto_Add_Time__c, Do_Not_Show_Time__c
+                FROM Summit_Events_Appointment_Type__c
+                WHERE Summit_Events__c = :eventId
+                AND (Chosen_State__c = 'Added' OR Chosen_State__c = 'Added and Required' OR Chosen_State__c = 'Added but not shown')
+                AND Id NOT IN (
+                        SELECT Event_Appointment_Type__c
+                        FROM Summit_Events_Appointments__c
+                        WHERE Event_Registration__c = :registrationId
+                )
+                AND (
+                        Restrict_To_Instance_Title__r.Instance_Title__c = :instanceTitle
+                        OR Restrict_To_Instance_Title__r.Instance_Title__c = NULL
+                        OR Restrict_To_Instance_Title__r.Instance_Title__c = ''
+                )
+                AND (
+                        Date_Available_Start__c <= :instanceStartDate
+                        OR Date_Available_Start__c = NULL
+                )
+                AND (
+                        Date_Available_End__c >= :instanceEndDate
+                        OR Date_Available_End__c = NULL
+                )
+                AND (
+                        Day_of_Week_Availability__c INCLUDES (:dayOfWeek)
+                        OR Day_of_Week_Availability__c = NULL
+                )
+                AND (
+                        Appointment_Type_Status__c = 'Active'
+                        OR Appointment_Type_Status__c = NULL
+                )
+                WITH SECURITY_ENFORCED
+                ORDER BY Sort_Order__c ASC NULLS LAST
         ];
     }
 
